syntax = "proto3";

package ocpp_csms_server;

message ChangeChargerAvailabilityRequest {
  string charger_id = 1;
  bool operative = 2;
}

message ChangeChargerAvailabilityResponse {
}