syntax = "proto3";

package ocpp_csms_server;

message ClearChargerCacheRequest {
  string charger_id = 1;
}

message ClearChargerCacheResponse {
}