syntax = "proto3";

package ocpp_csms_server;

message StartTransactionRequest {
  string charger_id = 1;
  string outlet_id = 2;
}

message StartTransactionResponse {
  string transaction_id = 1;
}