syntax = "proto3";

package ocpp_csms_server;

message StopTransactionRequest {
  string charger_id = 1;
  string transaction_id = 2;
}

message StopTransactionResponse {
  string transaction_id = 1;
}